removed input and label elements

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <h1>Sketch</h1>
-    <label for="iput">Enter a number between 1 and 100:</label>
-    <input type="text" id="iput" name="iput">
-    <button id="select">Select</button>
+    <button id="select">Reset</button>
     <div id="container"></div>
     <script defer src="script.js"></script>
 </body>
